// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_repr.chrono;

message ProtoTz {
    string name = 1;
}

message ProtoNaiveDate {
   int32 year = 1;
   uint32 ordinal = 2;
}

message ProtoNaiveTime {
    uint32 secs = 1;
    uint32 frac = 2;
}

message ProtoNaiveDateTime {
    ProtoNaiveDate date = 1;
    ProtoNaiveTime time = 2;
}

message ProtoFixedOffset {
    int32 local_minus_utc = 1;
}
